# pindo-cli

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: build.yaml  ci.yaml  release.yaml
pindo_cli/: .coveragerc  __init__.py  cli.py  http.py
pindo_cli/tests/: test_cli.py
tests/: test_cli.py
