[tool.poetry]
name = "pindo-cli"
version = "0.2.0"
description = "A simple Command Line Interface that allows you to authenticate with the Pindo API."
authors = ["Team Pindo <team@pindo.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pindoio/pindo-cli"
repository = "https://github.com/pindoio/pindo-cli"
documentation = "https://github.com/pindoio/pindo-cli"
keywords = ["agile", "standup"]
classifiers=[
        'Environment :: Console',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: MacOS',
        'Operating System :: POSIX :: Linux',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "pindo_cli" }
]

[tool.semantic_release]
version_variable = [
    "pindo_cli/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = "^3.7"
click8 = "^8.0.1"
requests = "^2.25.1"
click-spinner = "^0.1.10"
rich = "^10.6.0"
tomlkit = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-flake8 = "^1.0.7"
pytest-cov = "^2.11.1"
tomlkit = "^0.7.0"
coverage = {version = "^5.5", extras = ["toml"]}
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*/distutils/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pindo = 'pindo_cli.cli:cli'
